<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#A8A8A8"
        android:layout_gravity="center"
        android:layout_margin="10dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/are_you_sure_you_want_to_n_delete_this_note"
        android:gravity="center"
        android:fontFamily="@font/product_sans_bold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/txtYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/yes_button"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/product_sans_bold"/>
    <TextView
        android:id="@+id/txtNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/no_button"
        android:textSize="18sp"
        android:fontFamily="@font/product_sans_bold" />
</LinearLayout>