<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#707070"
        app:cardCornerRadius="10dp">

        <View
            android:id="@+id/viewPriority"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/red_dot"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin = "10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginEnd="35dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:maxLines="2"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/txtSubTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_regular"
                android:textColor="#D8D8D8"
                android:layout_marginEnd="35dp"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:text="@string/random" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_regular"
                android:textColor="@color/white"
                android:layout_marginEnd="35dp"
                android:textSize="16sp"
                android:maxLines="2"
                android:layout_marginTop="10dp"
                android:text="@string/_23_april_2002"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>