<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    tools:context=".ui.Fragments.CreateNoteFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:background="@drawable/et_title_shape"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_regular"
            android:maxLines="1"
            android:textColorHint="#D1D1D1"
            />
        <EditText
            android:id="@+id/etSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle"
            android:background="@drawable/et_title_shape"
            android:padding="15dp"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_regular"
            android:textColorHint="#D1D1D1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/imgGreenDot"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/green_dot"
                />

            <ImageView
                android:id="@+id/imgYellowDot"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/yellow_dot"
                />

            <ImageView
                android:id="@+id/imgRedDot"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/red_dot"
                />

        </LinearLayout>
        <EditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:hint="@string/write_a_note_here"
            android:background="@drawable/et_title_shape"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_regular"
            android:textColorHint="#D1D1D1"
            android:gravity="start"
            />
    </LinearLayout>

    


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="25dp"
        android:src="@drawable/ic_baseline_done_24"


        app:backgroundTint="#FF5151" />
</FrameLayout>